[workspace]
members = [
    "diode",
    "diode-macros",
    "diode-base",
    "diode-base-macros",
    "diode-http",
    "diode-http-macros",
    "diode-sql",
]
resolver = "3"

[workspace.dependencies]
diode = { path = "diode", version = "0.2" }
diode-macros = { path = "diode-macros", version = "0.2" }
diode-base = { path = "diode-base", version = "0.3" }
diode-base-macros = { path = "diode-base-macros", version = "0.1" }
diode-http = { path = "diode-http", version = "0.4" }
diode-http-macros = { path = "diode-http-macros", version = "0.3" }
diode-sql = { path = "diode-sql", version = "0.1" }
