[package]
name = "diode-base"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Basic services for the diode library"
repository = "https://github.com/udovin/diode-rs"

[features]
default = ["macros"]
macros = ["dep:diode-base-macros"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "rt", "signal"] }
tokio-util = "0.7"
diode = { workspace = true }
diode-base-macros = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.27"
tracing-opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
duration-str = "0.12"
notify = "6"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "rt", "signal", "macros", "time"] }
