[package]
name = "diode-http-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Macros for the diode-http library"
repository = "https://github.com/udovin/diode-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
