[package]
name = "diode-sql"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "SQL object and query abstractions for the diode library"
repository = "https://github.com/udovin/diode-rs"

[features]
default = ["macros"]
macros = ["dep:diode-sql-macros"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
decimal = ["dep:rust_decimal"]
json = ["dep:serde_json"]

[dependencies]
diode-sql-macros = { workspace = true, optional = true }
uuid = { version = "1", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }
rust_decimal = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
uuid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rust_decimal = "1"
serde_json = "1"
