[package]
name = "diode"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Macros for the diode library"

[features]
default = ["macros"]
macros = ["dep:diode-macros"]

[dependencies]
async-trait = "0.1.82"
diode-macros = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1.38.1", features = ["macros", "rt"] }
