[package]
name = "diode"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core diode library"
repository = "https://github.com/udovin/diode-rs"

[features]
default = ["macros"]
macros = ["dep:diode-macros"]

[dependencies]
async-trait = "0.1"
dashmap = "6"
diode-macros = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
